--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^4.6.x",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-order-pipe": "^2.1.1",
